# vendor-file-cli

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: daily-fetch.yaml  unit-tests.yaml
tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_utils.py  test_validator.py
vendor_file_cli/: __init__.py  commands.py  config.py  utils.py  validator.py
