[tool.poetry]
name = "vendor-file-cli"
version = "0.1.0"
description = "CLI tool to retrieve files from vendor servers"
authors = ["Charlotte Kostelic <charlottekostelic@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240808"
file-retriever = {git = "https://github.com/BookOps-CAT/file-retriever.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"


[tool.poetry.scripts]
fetch = "vendor_file_cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "livetest: mark a test as using live credentials",
]


[tool.coverage.run]
relative_files = true
source = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
